<resources>
    <string name="app_name">F3FStatApp</string>
    <string name="start_event_text">Przejdź do zawodów</string>
    <string name="settings_text">Ustawienia zawodów</string>
    <string name="synchronize_players_text">Pobierz listę zawodników</string>
    <string name="event_id_text">ID zawodów:</string>
    <string name="confirm_button">Zatwierdź</string>
    <string name="cancel_button">Powrót</string>
    <string name="email_text">E-mail:</string>
    <string name="password_text">Hasło:</string>
    <string name="settings_information_text">Podaj dane konta z portalu\n
        http://www.f3xvault.com.</string>
    <string name="success_authorization_text">Autoryzacja przebiegła pomyślnie</string>
    <string name="failure_authorization_text">Wpisane dane są niepoprawne</string>
    <string name="not_necessary_authorization_text">Wpisane dane nie zmieniły się</string>
    <string name="enter_to_start_event_with_incorrect_data">Najpierw przejdź do ustawień i
        wpisz poprawne dane</string>
    <string name="player_list_was_updated">Lista zawodników została
        zaktualizowana</string>
    <string name="player_list_was_not_updated">Nie udało się pobrać listy zawodników. Sprawdź
        czy dane w ustawieniach są poprawne.</string>
    <string name="start">Start</string>
    <string name="prepare_time">Czas przygotowawczy: %1$.1f s</string>
    <string name="start_time">Czas wznoszenia: %1$.1f s</string>
    <string name="open_drawer_desc">Otwórz</string>
    <string name="close_drawer_desc">Zamknij</string>
    <string name="min_group_amount_text">Min. liczba zawodników w grupie:</string>
    <string name="default_min_group_amount">10</string>
    <string name="warning_synchronize_players">Są już zainicjalizowane zawody, jeśli
        pobierzesz listę zawodników, stracisz wszystkie te dane. Czy aby na pewno chcesz to
    zrobić?</string>
    <string name="warning_create_event">Są już zainicjalizowane zawody, jeśli utworzysz nowe,
        stracisz te dane. Czy aby na pewno chcesz to zrobić?</string>

    <string name="yes">Tak</string>
    <string name="no">Nie</string>

    <string name="assign">Przypisz</string>

    <!-- Headers for f3FEvent details list -->
    <string name="start_number">Lp.</string>
    <string name="pilot_first_name">Imię</string>
    <string name="pilot_last_name">Nazwisko</string>
    <string name="pilot_class">Klasa</string>
    <string name="pilot_ama">AMA</string>
    <string name="pilot_fai">FAI</string>
    <string name="pilot_license_fai">Licencja FAI</string>
    <string name="pilot_team_name">Zespół</string>

    <!-- f3FEvent rounds -->
    <string name="add_round">Dodaj rundę</string>
    <string name="start_round">Start</string>


    <string name="action_current_fly">Aktualny lot</string>
    <string name="action_event_groups">Aktualna runda</string>
    <string name="action_round_order">Ustawianie kolejności startowej</string>
    <string name="cancel_round">Anuluj rundę</string>
    <string name="end_round">Zakończ rundę</string>
    <string name="send_results_to_server">Wyślij rezultaty rundy na serwer</string>
    <string name="cancel_groups">Anuluj grupy</string>
    <string name="send_groups">Wyślij grupy</string>
    <string name="back_to_round_view">Wróć do widoku rundy %1$d</string>
    <string name="send_group">Wyślij grupę %1$d</string>
    <string name="cancel_group">Anuluj grupę %1$d</string>

    <!-- states -->
    <string name="not_started">Nierozpoczęta</string>
    <string name="started">Trwa</string>
    <string name="finished">Zakończona</string>
    <string name="canceled">Anulowana</string>

    <!-- flight -->
    <string name="flight_number">Lot nr %1$d</string>
    <string name="assign_pilot">Przypisz pilota</string>
    <string name="dnf">DNF</string>
    <string name="flight_current_time">%1$.2f s</string>
    <string name="flight_current_wind">Wiatr: %1$d</string>
    <string name="results">Wyniki:</string>
    <string name="prepare_period">Czas przygotowawczy...</string>
    <string name="start_period">Czas startowy...</string>
    <string name="player_started">Model w strefie lotów</string>
    <string name="base_result">Baza %1$d: %2$.2f s</string>
    <string name="player_flight_by_base">Zaliczono bazę %1$d</string>
    <string name="player_flight_by_last_base">Zawodnik zaliczył ostatnią bazę</string>
    <string name="non_statutory_weather_condition">Nieregulaminowe warunki pogodowe!</string>
    <string name="current_wind_speed">Chwilowa prędkość:\n %1$.2f m/s</string>
    <string name="current_wind_direction">Chwilowy kierunek:\n %1$d°</string>
    <string name="avg_wind_speed">Średnia prędkość:\n %1$.2f m/s</string>
    <string name="avg_wind_direction">Średni\n kierunek:\n %1$d°</string>
    <string name="player_flight_first_time_by_a_base">Model za bazą A</string>
    <string name="player_exceeded_start_time">Zawodnik przekroczył czas startowy</string>
    <string name="penalty_points">Punkty karne:</string>
    <string name="default_penalty_points">0</string>

    <string name="update_round_status_success">Runda zakończona poprawnie.</string>
    <string name="update_round_status_failure">Nie udało się zakończyć rundy. Spróbuj
        ponownie</string>
    <string name="dnsButton">DNS</string>
    <string name="pilotItemTextView">1\n\2\n\3\n\4</string>
    <string name="assignAndSendButton">Przypisz</string>
    <string name="editButton">Edytuj</string>

    //edit button
    <string name="edit_order">Kolejność (order)</string>
    <string name="edit_information_text">Edycja parametrów zawodnika</string>
    <string name="edit_penalty">Punkty karne (penalty)</string>
    <string name="edit_seconds">Końcowy czas (seconds)</string>
    <string name="edit_confirm_button">Zapisz i wyślij</string>

    <string name="send_wind_dir_text">Wysyłanie kierunku wiatru</string>
    <string name="send_wind_speed_text">Wysyłanie prędkości wiatru</string>

    <string name="correctly_update_wind_settings">Poprawnie zaaktualizowano ustawienia dot. wiatru</string>
</resources>
