<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_current_fly"
        android:title="@string/action_current_fly"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_event_groups"
        android:title="@string/action_event_groups"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_event_pilots_order"
        android:title="@string/action_round_order"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_cancel_round"
        android:title="@string/cancel_round"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_send_results_to_server"
        android:title="@string/send_results_to_server"
        app:showAsAction="never"/>
</menu>