<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EventActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/event_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="200"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pilot_order_number_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/start_number"/>
        <TextView
            android:id="@+id/pilot_firstname_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/pilot_first_name"/>
        <TextView
            android:id="@+id/pilot_lastname_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/pilot_last_name"/>
        <TextView
            android:id="@+id/pilot_class_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/pilot_class"/>
        <TextView
            android:id="@+id/pilot_ama_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/pilot_ama"/>
        <TextView
            android:id="@+id/pilot_fai_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/pilot_fai"/>
        <TextView
            android:id="@+id/pilot_fai_license_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/pilot_license_fai"/>
        <TextView
            android:id="@+id/pilot_team_name_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/pilot_team_name"/>
    </LinearLayout>
    <ListView
        android:id="@+id/pilots_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>