<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutContainer"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/settings_information_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_information_text"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_information_textView"
            android:text="@string/email_text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_textView"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_editText"
            android:text="@string/password_text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_textView"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/enter_event_id_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_editText"
            android:text="@string/event_id_text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/event_id_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/enter_event_id_textView"
            android:layout_marginBottom="10dp"
            android:inputType="number" />

        <TextView
            android:id="@+id/min_group_amount_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_id_editText"
            android:text="@string/min_group_amount_text"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/min_group_amount_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/min_group_amount_textView"
            android:ems="10"
            android:text="@string/default_min_group_amount"
            android:inputType="number"
            android:layout_marginBottom="10dp"/>

        <Switch
            android:id="@+id/wind_dir_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/min_group_amount_editText"
            android:layout_marginVertical="5dp"
            android:text="@string/send_wind_dir_text" />

        <Switch
            android:id="@+id/wind_speed_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wind_dir_switch"
            android:layout_marginVertical="5dp"
            android:text="@string/send_wind_speed_text" />

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wind_speed_switch"
            android:layout_marginVertical="5dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/settings_response_textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@id/result_image"
            android:layout_centerHorizontal="true" />


        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_response_textView"
            android:layout_alignParentLeft="true"
            android:text="@string/confirm_button"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/settings_response_textView"
            android:text="@string/cancel_button"/>

    </RelativeLayout>

</RelativeLayout>