<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/stats_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/flight_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="50sp"
            android:textStyle="bold"
            app:fontFamily="sans-serif"
            android:textAlignment="center"
            android:text="@string/flight_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/live_status_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="center"
                android:textSize="30sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/current_time_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flight_current_time"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/current_wind_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flight_current_wind"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textAlignment="center"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitleTableBg"
            android:text="@string/results"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/prepare_time_result_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prepare_time"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/start_time_result_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_time"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:visibility="invisible"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="200dp">

        <Button
            android:id="@+id/assign_pilot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="false"
            android:text="@string/assign_pilot" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel_button" />
    </LinearLayout>

</RelativeLayout>