<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayoutContainer"
        android:layout_width="200dp"
        android:layout_height="400dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp">

        <TextView
            android:id="@+id/edit_seconds_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/relativeLayoutContainer"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:text="@string/edit_seconds" />

        <EditText
            android:id="@+id/edit_seconds_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_seconds_textView"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:inputType="numberDecimal" />

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_below="@id/event_id_editText"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/edit_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="31dp"
                android:layout_marginBottom="0dp"
                android:text="@string/edit_confirm_button" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/settings_information_textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_information_text"
        android:textAlignment="center"
        android:layout_above="@id/relativeLayoutContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>